# Tenjin

./: .clang-format  .clang-tidy  .env  .gitignore  .qmllint.ini  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
App/: CMakeLists.txt  CMakeLists_App.txt
App/android/: AndroidManifest.xml
App/android/res/values/: strings.xml
App/android/res/xml/: backup_rules.xml  data_extraction_rules.xml
App/android/src/app/tenjin/Tenjin/: AlarmScheduler.java  CloudSyncClient.java  MediaPickerClient.java  NotificationClient.java  ReminderReceiver.java  TimePickerClient.java  TtsClient.java
App/ios/: Info.plist  Info.plist.in  PrivacyInfo.xcprivacy  Tenjin.entitlements
App/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
App/src/: main.cpp
App/windows/: README.md  tenjin.rc
Service/: CMakeLists.txt
Service/DatabaseManager/: CMakeLists.txt
Service/DatabaseManager/include/DatabaseManager/: AnkiImporter.h  DatabaseManager.h  Fsrs.h  FsrsOptimizer.h  Schema.h  Types.h
Service/DatabaseManager/src/: AnkiImporter.cpp  DatabaseManager.cpp  DatabaseManager_Content.cpp  DatabaseManager_Database.cpp  DatabaseManager_Deck.cpp  DatabaseManager_Entry.cpp  DatabaseManager_ImportExport.cpp  DatabaseManager_Relation.cpp  DatabaseManager_Review.cpp  DatabaseManager_Search.cpp  DatabaseManager_Tag.cpp  Schema.cpp
Service/DatabaseManager/tests/: CMakeLists.txt
Service/DatabaseManager/tests/src/: SchemaTest.cpp  Sm2Test.cpp  TestHelpers.h
Service/DeckService/: CMakeLists.txt
Service/DeckService/include/DeckService/: DeckService.h
Service/DeckService/src/: DeckService.cpp
Service/EntryService/: CMakeLists.txt
Service/EntryService/include/EntryService/: EntryService.h
Service/EntryService/src/: EntryService.cpp
Service/WordService/: CMakeLists.txt
Service/WordService/include/WordService/: WordService.h
Service/WordService/src/: WordService.cpp
View/: ActionButton.qml  AddDeckDialog.qml  AddEntryDialog.qml  AddTagDialog.qml  AddWordDialog.qml  AnalyticsPanel.qml  CMakeLists.txt  CMakeLists_View.txt  ChartCard.qml  ConfirmDialog.qml  ContentBlock.qml  DeckDetailPanel.qml  DeckListPage.qml  EntryDetailView.qml  EntryListPanel.qml  EntryPage.qml  FormulaBlock.qml  FormulaWebView.qml  GridContentView.qml  IconBtn.qml  LanguageFlags.qml  Main.qml  MathSymbols.qml  MediaPlayerView.qml  MobileDrawer.qml  Platform.qml  RenameTagDialog.qml  SearchBox.qml  Sidebar.qml  TagChip.qml  TagsPage.qml  TenjinIcons.qml  ThemedDialog.qml  WebEmbed.qml  WordDetailView.qml  WordListPanel.qml  WordPage.qml
View/ViewModels/: CMakeLists.txt
View/ViewModels/include/ViewModels/: AppViewModel.h  DeckViewModel.h  EntryViewModel.h  LogViewModel.h  ReviewViewModel.h  SidebarViewModel.h  WordViewModel.h
View/ViewModels/src/: AppViewModel.cpp  DeckViewModel.cpp  EntryViewModel.cpp  FormulaRenderer.cpp  ReviewViewModel.cpp  SidebarViewModel.cpp  WordViewModel.cpp
View/components/: ActionButton.qml  AgeGateDialog.qml  AppText.qml  ChartCard.qml  ColorPickerPopup.qml  ContentBlock.qml  DesktopFileDialogs.qml  DesktopMediaDialog.qml  EmptyState.qml  ErrorState.qml  FormulaBlock.qml  GridContentView.qml  IconBtn.qml  LanguageFlagRow.qml  LoadingState.qml  MathSymbolPicker.qml  MediaSourceChooser.qml  PressScale.qml  SearchBox.qml  SheetPopup.qml  SkeletonItem.qml  Stepper.qml  StyledComboBox.qml  TagChip.qml  TagFilterPopup.qml  ThemePicker.qml  TimePicker.qml  ToggleSwitch.qml
View/dialogs/: AddDeckDialog.qml  AddEntryDialog.qml  AddRelationDialog.qml  AddTagDialog.qml  BugReportDialog.qml  ConfirmDialog.qml  ImportPickerDialog.qml  MediaPickerDialog.qml  RenameTagDialog.qml  ThemedDialog.qml  WhatsNewSheet.qml
View/flags/: README.md
View/fonts/: README.md
View/katex/: README.md
View/media/: MediaPlayerView.qml  WebEmbed.qml
View/pages/: DeckAnalyticsPage.qml  DeckListPage.qml  EntryPage.qml  HelpPage.qml  NewsPage.qml  ReviewPage.qml  SettingsPage.qml  StatsPage.qml  TagsPage.qml
View/panels/: AnalyticsPanel.qml  DeckDetailPanel.qml  DeckListPanel.qml  EntryDetailView.qml  EntryListPanel.qml  MobileDrawer.qml  Sidebar.qml
ViewModels/: CMakeLists.txt  CMakeLists_ViewModels.txt
ViewModels/include/ViewModels/: '  AppViewModel.h  CloudService.h  CloudSyncService.h  DeckViewModel.h  DocumentPickerService.h  EntryViewModel.h  FormulaItem.h  FormulaRenderer.h  HapticsService.h  LogViewModel.h  MicroTexGraphics_qt.h  NotificationService.h  PlatformHooks.h  ReviewViewModel.h  SidebarViewModel.h  TimePickerService.h  TtsService.h
ViewModels/src/: AppViewModel.cpp  CloudService.cpp  CloudSyncService.cpp  CloudSyncService_android.cpp  CloudSyncService_apple.mm  CloudSyncService_desktop.cpp  ContentBlockModel.cpp  DeckListModel.cpp  DeckViewModel.cpp  DocumentPickerService.cpp  DocumentPickerService_android.cpp  DocumentPickerService_default.cpp  DocumentPickerService_ios.mm  EntryViewModel_Content.cpp  EntryViewModel_Entry.cpp  EntryViewModel_Lifecycle.cpp  EntryViewModel_Media.cpp  EntryViewModel_Search.cpp  EntryViewModel_Tag.cpp  FormulaItem.cpp  FormulaRenderer.cpp  HapticsService.cpp  HapticsService_android.cpp  HapticsService_default.cpp  HapticsService_ios.mm  MicroTexGraphics_qt.cpp  MotionService_android.cpp  MotionService_default.cpp  MotionService_ios.mm  NotificationService.cpp  NotificationService_android.cpp  NotificationService_apple.mm  NotificationService_default.cpp  NotificationService_ios.mm  NotificationService_linux.cpp  NotificationService_windows.cpp  ReviewViewModel.cpp  ShareService_default.cpp  ShareService_ios.mm  SidebarModel.cpp  (+11 more)
cmake/: Assets.cmake  DotEnv.cmake  GenerateFonts.cmake  GenerateIcons.cmake  IconFont.cmake  MicroTeX.cmake  Miniz.cmake  Packaging.cmake  Sanitizers.cmake  StaticAnalysis.cmake  TenjinConfig.h.in  Translations.cmake  Vendor.cmake  Version.cmake  Warnings.cmake
docker/: android.Dockerfile  build-android.sh  build-appimage.sh  build-windows.sh  linux-appimage.Dockerfile  windows-mingw.Dockerfile
docs/: BATCH4.md  (+10 more)
tests/: CMakeLists.txt  test_anki_importer.cpp  test_database_roundtrip.cpp  test_main.cpp  test_scheduling.cpp
(+67 files in other folders)
